# gat-lending-iterator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/adapters/: chain.rs  cloned.rs  enumerate.rs  filter.rs  filter_map.rs  intersperse.rs  map.rs  mod.rs  peekable.rs  skip.rs  skip_while.rs  step_by.rs  take.rs  take_while.rs  zip.rs
src/sources/: mod.rs  once.rs
src/to_lending/: into_lending.rs  lend_refs.rs  lend_refs_mut.rs  mod.rs  windows.rs  windows_mut.rs
src/traits/: exact_size.rs  functions.rs  lending_iterator.rs  marker.rs  mod.rs  to_lending_iterator.rs
src/traits/marker/: impl_trusted_len.rs
