[package]
name = "gat-lending-iterator"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A library for iterators who's items can [mutably] reference the iterator."
homepage = "https://github.com/Crazytieguy/gat-lending-iterator"
repository = "https://github.com/Crazytieguy/gat-lending-iterator/"
documentation = "https://docs.rs/gat-lending-iterator"
readme = "README.md"
keywords = ["iterator", "lending", "gat"]
categories = ["algorithms", "rust-patterns"]
rust-version = "1.65"

[features]
default = []
alloc = []
std = ["alloc"]
